# MiraiVN

./: .travis.yml  CMakeLists.txt  README.md  license.txt
cmake/: genrev.cmake  options.cmake
cmake/macros/: clang-settings.cmake  gcc-settings.cmake
dep/: CMakeLists.txt
dep/MiraiProject/src/: CMakeLists.txt
include/character/: Character.hpp
include/display/: DialogueFrame.hpp  DialogueFrameStream.hpp  DialogueManager.hpp  DialogueSkin.hpp
src/: CMakeLists.txt
src/Main/: main.cpp
src/character/: Character.cpp
src/display/: DialogueFrame.cpp  DialogueFrameStream.cpp  DialogueManager.cpp  DialogueSkin.cpp
